--- a/CSS_advanced/styles/4-style.css
+++ b/CSS_advanced/styles/4-style.css
@@ -1,19 +1,33 @@
-/* styles/3-style.css */
-
+html {
+	scroll-behavior: smooth;
+}
 :root {
-    /* Custom font-family properties */
-    --font-family-base: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    --font-family-title: 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  }
+	--color-primary: #d73953;
+    --color-black: #090909;
+    --color-white: #ffffff;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
+    --text-color: var(--color-black);
+	--font-family-base:Helvetica Neue, Helvetica, Arial,sans-serif;
+	--font-family-title:Helvetica Neue, Helvetica, Arial,sans-serif;
+}
 
-  /* Apply font-family-base to the body */
-  body {
-    font-family: var(--font-family-base);
-  }
-
-  /* Apply font-family-title to all heading tags (h1 to h6) */
-  h1, h2, h3, h4, h5, h6 {
-    font-family: var(--font-family-title);
-  }
-
-  /* Additional styles can be added as needed */
+body {
+	color: var(--text-color);
+	font-family: var(--font-family-base);
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family:var (--font-family-title);
+}
+a {
+	color: var(--text-color);
+}
+.visually-hidden {
+	display:none;
+}
+.card-category{
+	color: var(--color-primary);
+}
+.section-tagline{
+	color:var(--color-primary);
+}
