--- a/CSS_advanced/styles/13-style.css
+++ b/CSS_advanced/styles/13-style.css
@@ -1,65 +1,91 @@
-/* styles/12-style.css */
-
-:root {
-	/* New custom property */
-	--color-light-grey: #f3f3f3;
-  }
-
-  /* Targeting anchor elements that contain a hyperlink */
-  a[href] {
-	color: var(--text-color);
-	text-decoration: none;
-  }
-
-  /* Targeting the visited state */
-  a[href]:visited {
-	color: var(--text-color);
-	font-style: italic;
-  }
-
-  /* Targeting the hover state */
-  a[href]:hover {
-	text-decoration: underline;
-  }
-
-  /* Targeting the active state */
-  a[href]:active {
-	background-color: var(--color-light-grey);
-  }
-
-  /* Existing styles remain unchanged */
-  html {
+html {
 	scroll-behavior: smooth;
 	font-size: 62.5%;
-  }
+}
+:root {
+	/* color */
+	--color-primary: #d73953;
+    --color-black: #090909;
+    --color-white: #ffffff;
+    --color-light-grey: #f3f3f3;
+    --color-dark-grey: #353535;
 
-  body {
+	/* text write */
+    --text-color: var(--color-black);
+	--font-family-base:Open Sans,Helvetica Neue, Helvetica, Arial,sans-serif;
+	--font-family-title:Raleway,Helvetica Neue, Helvetica, Arial,sans-serif;
+
+	/* text size */
+	--font-size-small: 1.2rem;
+	--font-size-medium: 1.6rem;
+	--font-size-large: 1.8rem;
+	--font-size-x-large: 2.3rem;
+	--font-size-xx-large: 4.8rem;
+
+	/* text weight */
+	--font-weight-regular: 400;
+	--font-weight-bold: 700;
+
+	/* line-height */
+	--line-height-small: 1.2;
+	--line-height-base: 1.5;
+	--line-height-big: 1.8;
+
+	/* section-center */
+	--section-header-align:center;
+	--section-tagline-transform: uppercase;
+	--section-title-margin:0;
+	--section-title-color: var(--color-black);
+}
+
+body {
 	color: var(--text-color);
 	font-family: var(--font-family-base);
 	font-size: var(--font-size-medium);
 	font-weight: var(--font-weight-regular);
 	line-height: var(--line-height-base);
-  }
+}
+h1, h2, h3, h4, h5, h6 {
+	font-family: var (--font-family-title);
+	font-weight: var (--font-weight-bold);
+}
+/* targets those containing a hyperlink */
+a:link {
+	color: var(--text-color);
+	text-decoration: none;
+}
+/* target the visited state for the link */
+a:visited{
+	font-style: italic;
 
-  h1, h2, h3, h4, h5, h6 {
-	font-family: var(--font-family-title);
-	font-weight: var(--font-weight-bold);
-  }
-
-  .visually-hidden {
+}
+/* target the hover state for the link */
+a:hover{
+	text-decoration:underline;
+}
+/* target the active state for the link */
+a:active{
+	background-color: var(--color-light-grey);
+}
+.visually-hidden {
 	display: none;
-  }
-
-  .card-category, .section-tagline {
+}
+.card-category .section-tagline {
 	color: var(--color-primary);
-  }
-
-  .section-header {
-	text-align: var(--section-header-align);
-  }
-
-  .section-tagline {
+}
+.section-tagline{
+	color: var(--color-primary);
 	font-family: var(--font-family-title);
 	text-transform: var(--section-tagline-transform);
 	font-weight: var(--font-weight-bold);
-  }
+}
+.section-header {
+	text-align: var(--section-header-align);
+}
+.section-title{
+	font-family: var(--font-family-title);
+	font-size: var(--font-size-xx-large);
+	font-weight: var(--font-weight-bold);
+	margin: var(--section-title-margin);
+	color: var(--section-title-color);
+}
