--- a/CSS_advanced/styles/32-style.css
+++ b/CSS_advanced/styles/32-style.css
@@ -80,9 +80,9 @@ html {
 	--header-logo-link-top: -1rem;
 	--header-logo-link-left: 0;
 
-	/* transit */
-	--transition-duration: 0.3s;
-    --transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
+	/* transitions */
+	--transition-duration: .3s;
+	--transition-cubic-bezier: cubic-bezier(0.17, 0.67, 0, 1.01);
 }
 
 body {
@@ -98,20 +98,24 @@ h1, h2, h3, h4, h5, h6 {
 	font-weight: var (--font-weight-bold);
 }
 
+/* targets those containing a hyperlink */
 a:link {
 	color: var(--text-color);
 	text-decoration: none;
 }
 
+/* target the visited state for the link */
 a:visited {
 	font-style: italic;
 
 }
 
+/* target the hover state for the link */
 a:hover {
 	text-decoration: underline;
 }
 
+/* target the active state for the link */
 a:active {
 	background-color: var(--color-light-grey);
 }
@@ -129,15 +133,8 @@ a:active {
 	color: var(--button-hover-color);
 	text-decoration: var(--button-hover-text-decoration);
 	background: var(--button-hover-background);
-}
-
-.button:hover {
-    color: var(--button-hover-color);
-    text-decoration: var(--button-hover-text-decoration);
-    background: var(--button-hover-background);
-    transition:
-        color var(--transition-duration) var(--transition-cubic-bezier),
-        background-color var(--transition-duration) var(--transition-cubic-bezier);
+	transition-duration: var(--transition-duration);
+	transition-property: color, background-color;
 }
 
 .visually-hidden {
@@ -156,6 +153,7 @@ a:active {
 	margin: var(--section-tagline-margin);
 }
 
+/* container class */
 .container {
 	width: 960px;
 	margin-left: auto;
@@ -225,6 +223,7 @@ a:active {
     background-color: var(--color-white);
     width: 0;
     height: 0.2rem;
+	transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .nav .nav-link:hover {
@@ -234,17 +233,6 @@ a:active {
 .nav .nav-item:hover .nav-link::before {
     background-color: var(--color-primary);
     width: 100%;
-}
-
-.nav .nav-link::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: var(--color-white);
-    width: 0;
-    height: 0.2rem;
-    transition: width var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 ul.row {
@@ -339,63 +327,12 @@ ul.row {
 	color: var(--color-primary)
 }
 
-.card-work .card-outer {
-    position: relative;
-    overflow: hidden;
-}
-
-.card-work .card-image img {
-    height: 30rem;
-    width: 100%;
-    object-fit: cover;
-    vertical-align: bottom;
-}
-
-.card-work .card-inner {
-    position: absolute;
-    top: -0.1rem;
-    left: -0.1rem;
-    right: -0.1rem;
-    z-index: 1;
-}
-
-.card-work:hover .card-inner {
-    background-color: rgba(0, 0, 0, 0.7);
-}
-
-.card-work .card-title {
-    text-align: center;
-    margin: 0;
-    opacity: 0;
-    height: 100%;
-    position: relative;
-}
-
-.card-work .card-title a {
-    display: block;
-    text-decoration: none;
-    padding-top: 45%;
-}
-
-.card-work .card-title a::after {
-    content: '';
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-}
-
-.card-work:hover .card-title {
-    opacity: 1;
-}
-
 .card-testimonial .card-quote {
-    position: relative;
+	position: relative;
 }
 
 .card-testimonial .card-quote::before {
-    content: '\201C';
+	content: "\201C";
     position: absolute;
     top: -4.5rem;
     left: -1rem;
@@ -404,19 +341,65 @@ ul.row {
     z-index: -1;
 }
 
+.card-work .card-outer {
+	position: relative;
+	overflow: hidden;
+}
+
+.card-work .card-image img {
+	height: 30rem;
+	width: 100%;
+	object-fit: cover;
+	vertical-align: bottom;
+}
+
+.card-work .card-inner {
+	position: absolute;
+	top: -0.1rem;
+	left: -0.1rem;
+	right: -0.1rem;
+	z-index: 1;
+	transition: var(--transition-duration) var(--transition-cubic-bezier);
+}
+
+.card-work:hover .card-inner {
+	background-color: rgba(0, 0, 0, 0.7);
+}
+
+.card-work .card-title {
+	text-align: center;
+	margin: 0;
+	opacity: 0;
+	height: 100%;
+	position: relative;
+}
+
+.card-work .card-title a {
+	display: block;
+	text-decoration: none;
+	padding-top: 45%;
+}
+
+.card-work .card-title a::after {
+	position: absolute;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
+	content: "";
+}
+
+.card-work:hover .card-title {
+	opacity: 1;
+}
+
 .card-work:hover .card-image {
     transform: scale(1.2);
-    transition: transform var(--transition-duration) var(--transition-cubic-bezier);
+    transition: var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .card-work:hover .card-outer {
     transform: scale(0.95);
-    transition: transform var(--transition-duration) var(--transition-cubic-bezier);
-}
-
-.card-work:hover .card-inner {
-    background-color: rgba(0, 0, 0, 0.7);
-    transition: background-color var(--transition-duration) var(--transition-cubic-bezier);
 }
 
 .section-hero {
